--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="nav">
           <a class="logo header-logo" href="./index.html"
@@ -50,15 +50,15 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- перша часть -->
-      <section class="main-sec">
+      <!-- <section class="main-sec">
         <div class="container centered">
           <h1 class="glava">Effective Solutions for Your Business</h1>
           <button class="but" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
       <section class="futures-sec">
         <div class="container">
           <h2 class="name-futures visually-hidden">Our futures</h2>
@@ -115,8 +115,8 @@
         </div>
       </section>
       <!-- друга секция -->
-      <section class="second-section">
-        <div class="container">
+      <section class="second-section ">
+        <div class="container container-nero">
           <h2 class="name-team">Our Team</h2>
           <ul class="ul-photo">
             <li class="team-list">
@@ -416,74 +416,76 @@
           </ul>
         </div>
       </section>
+
+      <footer class="foot">
+        <div class="container footer-container">
+          <div class="container-one">
+            <a class="logo footer-logo" href="./index.html"
+              >WEB<span class="logo-studio">Studio</span></a
+            >
+            <p class="foot-par">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <!--   2 секция футера   -->
+  
+          <div class="container-two">
+            <p class="social-media">Social media</p>
+            <ul class="glad-foot">
+              <li class="listing-item">
+                <a href="" class="social-networks finish">
+                  <svg class="c-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="listing-item">
+                <a href="" class="social-networks finish">
+                  <svg class="c-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="listing-item">
+                <a href="" class="social-networks finish">
+                  <svg class="c-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="listing-item">
+                <a href="" class="social-networks finish">
+                  <svg class="c-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+  
+          <!-- 3 секция футера -->
+          <div class="container-third">
+            <p class="footer-form-text">Subscribe</p>
+            <form class="footer-form">
+              <label class="footer label">
+                <input class="footer-input-form" type="email" name="email" placeholder="E-mail"/>
+              </label>
+                <button class="footer-button" type="submit">Subscribe
+                  <svg class="icon-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-telegram">
+                    </use>
+                  </svg>
+                </button>
+            </form>
+          </div>
+        </div>
+      </footer>
     </main>
-    <footer class="foot">
-      <div class="container footer-container">
-        <div class="container-one">
-          <a class="logo footer-logo" href="./index.html"
-            >WEB<span class="logo-studio">Studio</span></a
-          >
-          <p class="foot-par">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <!--   2 секция футера   -->
-
-        <div class="container-two">
-          <p class="social-media">Social media</p>
-          <ul class="glad-foot">
-            <li class="listing-item">
-              <a href="" class="social-networks finish">
-                <svg class="c-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="listing-item">
-              <a href="" class="social-networks finish">
-                <svg class="c-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="listing-item">
-              <a href="" class="social-networks finish">
-                <svg class="c-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="listing-item">
-              <a href="" class="social-networks finish">
-                <svg class="c-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <!-- 3 секция футера -->
-        <div class="container-third">
-          <p class="footer-form-text">Subscribe</p>
-          <form class="footer-form">
-            <label class="footer label">
-              <input class="footer-input-form" type="email" name="email" placeholder="E-mail"/>
-            </label>
-              <button class="footer-button" type="submit">Subscribe
-                <svg class="icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-telegram">
-                  </use>
-                </svg>
-              </button>
-          </form>
-        </div>
-      </div>
-    </footer>
+   
       <!--  модальне окно -->
 
-      <div class="backdrop is-open">
+      <div class="backdrop is-ope">
         <div class="modal">
           <button class="modal-button" type ="button">
             <svg class="modal-svg-exite" width="8" height="8">
