--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     </header> -->
     <main>
       <!-- перша часть -->
-      <!-- <section class="main-sec">
+      <section class="main-sec">
         <div class="container centered">
           <h1 class="glava">Effective Solutions for Your Business</h1>
           <button class="but" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
       <section class="futures-sec">
         <div class="container">
           <h2 class="name-futures visually-hidden">Our futures</h2>
@@ -417,72 +417,72 @@
         </div>
       </section>
 
-      <footer class="foot">
-        <div class="container footer-container">
-          <div class="container-one">
-            <a class="logo footer-logo" href="./index.html"
-              >WEB<span class="logo-studio">Studio</span></a
-            >
-            <p class="foot-par">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <!--   2 секция футера   -->
-  
-          <div class="container-two">
-            <p class="social-media">Social media</p>
-            <ul class="glad-foot">
-              <li class="listing-item">
-                <a href="" class="social-networks finish">
-                  <svg class="c-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="listing-item">
-                <a href="" class="social-networks finish">
-                  <svg class="c-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="listing-item">
-                <a href="" class="social-networks finish">
-                  <svg class="c-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="listing-item">
-                <a href="" class="social-networks finish">
-                  <svg class="c-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-  
-          <!-- 3 секция футера -->
-          <div class="container-third">
-            <p class="footer-form-text">Subscribe</p>
-            <form class="footer-form">
-              <label class="footer label">
-                <input class="footer-input-form" type="email" name="email" placeholder="E-mail"/>
-              </label>
-                <button class="footer-button" type="submit">Subscribe
-                  <svg class="icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-telegram">
-                    </use>
-                  </svg>
-                </button>
-            </form>
-          </div>
-        </div>
-      </footer>
+     
     </main>
-   
+    <footer class="foot">
+      <div class="container footer-container">
+        <div class="container-one">
+          <a class="logo footer-logo" href="./index.html"
+            >WEB<span class="logo-studio">Studio</span></a
+          >
+          <p class="foot-par">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <!--   2 секция футера   -->
+
+        <div class="container-two">
+          <p class="social-media">Social media</p>
+          <ul class="glad-foot">
+            <li class="listing-item">
+              <a href="" class="social-networks finish">
+                <svg class="c-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="listing-item">
+              <a href="" class="social-networks finish">
+                <svg class="c-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="listing-item">
+              <a href="" class="social-networks finish">
+                <svg class="c-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="listing-item">
+              <a href="" class="social-networks finish">
+                <svg class="c-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- 3 секция футера -->
+        <div class="container-third">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer label">
+              <input class="footer-input-form" type="email" name="email" placeholder="E-mail"/>
+            </label>
+              <button class="footer-button" type="submit">Subscribe
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-telegram">
+                  </use>
+                </svg>
+              </button>
+          </form>
+        </div>
+      </div>
+    </footer>
       <!--  модальне окно -->
 
       <div class="backdrop is-ope">
